--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 instances: [{ prompt: imagePrompt }],
                 parameters: { "sampleCount": 1 }
             };
-            const apiKey = ""; // API key will be injected by the environment
+            const apiKey = "AIzaSyDJc2548axzX-nxZahvdh5CiD9TfpzuHv0"; // API key will be injected by the environment
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate-002:predict?key=${apiKey}`;
 
             try {
